--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "Learning FULL STACK Through Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "sujal kumar",
   "license": "ISC",
